tests/neg/objects/obj-05.ts

/*@ foo :: ({ x: { number | v = 3 } } ) => number */
function foo (x) {
  return x.a;
}
